5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1643_2704.log
== TEST (2019-04-08 19:20:46) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificação? ")
bo = nota * 10 / 100
if (boni == s):
	print(nota+bo)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (boni == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:21:38) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
if (boni == s):
	print(nota+bo)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (boni == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:24:37) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = (s)
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    bonus = (s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:24:57) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("s")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:25:12) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("s")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:25:13) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("s")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- EXECUTION TIME:
0.162175
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
nota do vagabungo: bonificacao? 5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
nota do vagabungo: bonificacao? 9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
nota do vagabungo: bonificacao? 4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:25:15) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("s")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- EXECUTION TIME:
0.16293
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:25:30) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("s")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:30) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("S")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:26:35) 
-- CODE:
nota = float(input("nota do vagabungo: "))
boni = input("bonificacao? ")
bo = nota * 10 / 100
bonus = ("S")
if (boni == bonus):
	print(nota+bo)
else:
	print(nota)
-- EXECUTION TIME:
0.169075
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
